@@ -4,6 +4,13 @@ Changes in version 0.5.1 (released 2012-xx-xx)
 
  o Fix Issue 9. 
 
+ o Fix an error with readColumns that was affecting read.xlsx.  By
+ default readColumns was using the max number of rows in the sheet to
+ determine how many rows to read.  If the max number of rows in sheet
+ was greater than the existing number of rows in the column you were
+ reading, you were getting a NullPointerException.  Only noticed this
+ in for xls format.  
+
  o TODO:  Fix bug in read.xlsx2 when user asks for colType "factor".
  The assignment "class(aux) <- colClasses[i]" in readColumns returns
  the error: "adding class "factor" to an invalid object" Strange.
